# Odoo19-redo-taxes

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: austria-cosmetic-mapping-spec.draft.yaml  codexplayground-baseline-2026-03-12.md
docs/: datenpol-euro-demo-codebase-guide.docx  datenpol-euro-demo-codebase-guide.md  odoo19-demo-austria-handoff-plan.md  operator-runbook.md  python-quality-standards.md  reference-company-and-optional-accounts-plan-2026-03-31.md  skill-implementation-checklist.md  skill-packaging-plan.md  skill-wrapper-contract.md  vertrieb-datenpol-euro-demo.docx  vertrieb-datenpol-euro-demo.md
skills/datenpol-euro-demo/: SKILL.md
src/odoo_demo_austria/: _cli_runtime.py  _planner_builders.py  _planner_reference_tax_sync.py  _planner_report_aware.py  _planner_resolvers.py  _planner_types.py  _runtime_reference_tax_sync.py  _runtime_reference_tax_sync_accounts.py  _spec_project_extras.py  _spec_sections.py  _spec_support.py  _validator_cosmetic.py  _validator_identity.py  cli.py  (+6 more)
src/odoo_demo_austria.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_file_lengths.py  test_planner.py  test_reference_company_resolution.py  test_resolvers.py  test_runtime_apply.py  test_runtime_reference_tax_sync.py  test_skill_github_install.py  test_skill_launcher.py  test_skill_packaging.py  test_spec_loader.py  test_validator_cosmetic.py  test_validator_reference_tax_surface.py
tools/: README.md  __init__.py  build_datenpol_euro_demo_skill.py  odoo_demo_austria.py  odoo_json2.py
(+35 files in other folders)
